<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BubbleActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/dimen_20dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/about_bubble_game"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_carrying_bubble_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_200dp" />
                    <ImageView
                        android:contentDescription="@string/about_bubble_game"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_carrying_bubble_2"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="30dp"
                         />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#0000FF"
                        android:textSize="25sp"
                        android:text="@string/description"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_bubble"
                        android:layout_gravity="right"
                        android:textSize="@dimen/dimen_20sp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="fill_horizontal"
                        android:layout_marginBottom="@dimen/dimen_20dp"
                        tools:ignore="RtlHardcoded" />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:layout_marginEnd="@dimen/dimen_20dp"
                        android:background="@drawable/selectorbutton"
                        android:id="@+id/buttonBubble"
                        android:layout_marginBottom="@dimen/dimen_20dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>