<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_40dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginBottom="30dp">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:layout_height="wrap_content"
                            android:id="@+id/textInputEditTextPhone" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary"
                        android:hint="@string/enter_password"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginBottom="@dimen/dimen_30dp">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:id="@+id/textInputEditTextPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:background="@drawable/selectorbutton"
                        android:id="@+id/buttonLogin"
                        android:layout_marginBottom="@dimen/dimen_20sp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/dimen_17sp"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/textViewForgotPassword"/>
                        <TextView
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_register"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/dimen_17sp"
                            android:id="@+id/textViewNewRegister"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>



</LinearLayout>