<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/ic_background"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_first_name"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:inputType="text"
                            android:lines="1"
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextFirstName"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_last_name"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:layout_width="match_parent"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:inputType="text"
                            android:lines="1"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextLastName"/>
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_father_name"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:layout_width="match_parent"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:inputType="text"
                            android:lines="1"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextFatherName"/>
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_mobile_number"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:layout_width="match_parent"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:inputType="phone"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextMobileNumber"/>
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_password"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:layout_width="match_parent"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:inputType="textPassword"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="@dimen/dimen_35dp"
                            android:id="@+id/editTextPassword"/>
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/enter_confirm_password"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/dimen_20dp"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:layout_width="match_parent"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:inputType="textPassword"
                            android:background="@drawable/background_edit_text"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:layout_height="@dimen/dimen_35dp"
                            android:id="@+id/editTextConfirmPassword"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/buttonSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_40dp"
                        android:layout_marginStart="@dimen/dimen_40dp"
                        android:background="@drawable/selectorbutton"
                        android:layout_marginBottom="@dimen/dimen_20dp"
                        android:text="@string/sign_up"/>


                </LinearLayout>




            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>



</LinearLayout>